objects/PAYBASE2__Payment__c.object
<CustomObject>
    <description>Represents payments from you to your customers</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>This is the Salesforce Record ID of the Contact&apos;s Account record, used to make some coding issues easier. (copied from custom field on paycp1</description>
        <formula>IF( NOT(ISBLANK( PAYBASE2__Created_From_Account__c )), PAYBASE2__Created_From_Account__r.Id, 
IF( NOT(ISBLANK( PAYBASE2__Created_From_Opportunity__c )), PAYBASE2__Created_From_Opportunity__r.AccountId, 
IF( NOT(ISBLANK( PAYBASE2__Created_From_Contact__c )), PAYBASE2__Created_From_Contact__r.AccountId, &quot;&quot; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_text__c</fullName>
        <formula>IF( RecordType.Name = &quot;Worldpay&quot;, 

&quot;Please note that as this is a payment through an old card payment provider, it will not be possible to make a refund through Salesforce. &quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Amount_Refunded__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Where refunds have been linked to this payment, the total amount of those refunds</description>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Amount__c</fullName>
        <description>Payment amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Balance__c</fullName>
        <description>The payment amount minus the total amount refunded</description>
        <formula>PAYBASE2__Amount__c  -  PAYBASE2__Amount_Refunded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Created_From_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links payment to a particular account</description>
        <label>Created From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Created_From_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links payment to a particular contact</description>
        <label>Created From Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Created_From_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links payment to a particular lead</description>
        <label>Created From Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Created_From_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links payment to a particular opportunity</description>
        <label>Created From Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Is_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was payment transaction successful</description>
        <label>Is Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Pay_Date__c</fullName>
        <label>Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Status_Text__c</fullName>
        <description>Information about payment, such as why payment failed</description>
        <label>Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYBASE2__Status__c</fullName>
        <description>Payment status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYCP2__Address_Check__c</fullName>
        <description>Results of any address check carried out by the payment gateway</description>
        <label>Address Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Not Supplied</fullName>
                </value>
                <value>
                    <fullName>Not Checked</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matched</fullName>
                </value>
                <value>
                    <fullName>Partial Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYCP2__Address_City__c</fullName>
        <description>Card holder&apos;s address city</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Address_Country__c</fullName>
        <description>Card holder&apos;s address country</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Address_County__c</fullName>
        <description>Card holder&apos;s address county</description>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Address_Postcode__c</fullName>
        <description>Card holder&apos;s address postcode</description>
        <label>Postcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Address_Street__c</fullName>
        <description>Card holder&apos;s address street</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Authorisation_Code__c</fullName>
        <description>Transaction authorisation code returned by payment gateway</description>
        <label>Authorisation Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__CVV_Check__c</fullName>
        <description>CVV check result returned from payment gateway</description>
        <label>CVV Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Not Supplied</fullName>
                </value>
                <value>
                    <fullName>Not Checked</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matched</fullName>
                </value>
                <value>
                    <fullName>Partial Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYCP2__Card_Expiry__c</fullName>
        <description>Card expiry date returned by payment gateway</description>
        <label>Card Expiry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Card_Type__c</fullName>
        <description>Card type returned by payment gateway</description>
        <label>Card Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Created_From_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is redundant and should not be used</description>
        <label>Old Created From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Created_From_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is redundant and should not be used</description>
        <label>Old Created From Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Created_From_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is redundant and should not be used</description>
        <label>Old Created From Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Created_From_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is redundant and should not be used</description>
        <label>Old Created From Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Email__c</fullName>
        <description>Card holder&apos;s email address</description>
        <label>Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__FI_Recipient_Account_Number__c</fullName>
        <label>FI Recipient Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__FI_Recipient_Date_Of_Birth__c</fullName>
        <label>FI Recipient Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAYCP2__FI_Recipient_Postcode__c</fullName>
        <label>FI Recipient Postcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__FI_Recipient_Surname__c</fullName>
        <label>FI Recipient Surname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Gateway_Id__c</fullName>
        <description>Id sent to payment gateway to identify client</description>
        <label>Gateway Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Gateway_Transaction_Id__c</fullName>
        <description>Transaction id supplied by payment gateway</description>
        <label>Gateway Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a test transaction</description>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Masked_PAN__c</fullName>
        <description>Card number returned by payment gateway</description>
        <label>Masked PAN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Name_On_Card__c</fullName>
        <description>Card holder&apos;s name</description>
        <label>Name On Card</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Payment_Description__c</fullName>
        <description>Description of payment</description>
        <label>Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYCP2__Postcode_Check__c</fullName>
        <description>Result of postcode check returned from payment gateway</description>
        <label>Postcode Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Supported</fullName>
                </value>
                <value>
                    <fullName>Not Supplied</fullName>
                </value>
                <value>
                    <fullName>Not Checked</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matched</fullName>
                </value>
                <value>
                    <fullName>Partial Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYCP2__Vendor_Transaction_Id__c</fullName>
        <description>Transaction id supplied by card payment application</description>
        <label>Vendor Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Address_Status__c</fullName>
        <description>Address check status, returned by SagePay</description>
        <label>Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Bank_Authorisation_Code__c</fullName>
        <description>Bank authorisation code, returned by SagePay</description>
        <label>Bank Authorisation Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__CAVV__c</fullName>
        <description>CAVV, returned by SagePay</description>
        <label>CAVV</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Decline_Code__c</fullName>
        <description>Transaction declined code, returned by SagePay</description>
        <label>Decline Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Fraud_Response__c</fullName>
        <description>Fraud check response, returned by SagePay</description>
        <label>Fraud Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Not Checked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Gift_Aid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was a gift aid transaction, returned by SagePay</description>
        <label>Gift Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Payer_Status__c</fullName>
        <description>Payer status, returned by SagePay</description>
        <label>Payer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Unverified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Redirect_Parent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Redirect Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Redirect_URL__c</fullName>
        <description>URL to redirect user to after transaction complete</description>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Security_Key__c</fullName>
        <description>Security key, returned by SagePay</description>
        <label>Security Key</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYSPCP1__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eCommerce</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>MOTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAYSPCP1__X3D_Secure_Status__c</fullName>
        <description>3D secure check status, returned from SagePay</description>
        <label>3D Secure Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Not Checked</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Not Authorised</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_status_email_sent_to_cardholder__c</fullName>
        <inlineHelpText>The date/time that the email with the payment transaction ID, amount and payment status was sent to the cardholder</inlineHelpText>
        <label>Payment status email sent to cardholder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Receipt_Email_Address__c</fullName>
        <label>Receipt Email Address</label>
        <type>Email</type>
    </fields>
    <label>Payonomy Payment</label>
    <listViews>
        <fullName>PAYBASE2__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>PAYBASE2__Amount__c</columns>
        <columns>PAYBASE2__Pay_Date__c</columns>
        <columns>PAYBASE2__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payonomy Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payonomy Payments</pluralLabel>
    <recordTypes>
        <fullName>PAYBASE2__Base</fullName>
        <active>true</active>
        <label>Base</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAYBASE2__Cash</fullName>
        <active>true</active>
        <description>Cash payment</description>
        <label>Cash</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAYBASE2__Cheque</fullName>
        <active>true</active>
        <description>Cheque payment</description>
        <label>Cheque</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAYBASE2__Standing_Order</fullName>
        <active>true</active>
        <description>Standing order payment</description>
        <label>Standing Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAYSPCP1__SagePay</fullName>
        <active>true</active>
        <description>Credit card payment using SagePay payment gateway</description>
        <label>SagePay</label>
    </recordTypes>
    <recordTypes>
        <fullName>Worldpay</fullName>
        <active>true</active>
        <description>Credit card payment via Worldpay (Not in Package)</description>
        <label>Worldpay</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PAYBASE2__Amount_greater_than_zero</fullName>
        <active>false</active>
        <description>This is redundant</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorDisplayField>PAYBASE2__Amount__c</errorDisplayField>
        <errorMessage>Amount must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAYSPCP1__Amount_greater_than_1</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name == &apos;SagePay&apos; &amp;&amp;PAYBASE2__Amount__c  &lt; 1</errorConditionFormula>
        <errorDisplayField>PAYBASE2__Amount__c</errorDisplayField>
        <errorMessage>Amount cannot be less than 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAYSPCP1__Amount_less_than_100001</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name == &apos;SagePay&apos; &amp;&amp;PAYBASE2__Amount__c  &gt; 100000</errorConditionFormula>
        <errorDisplayField>PAYBASE2__Amount__c</errorDisplayField>
        <errorMessage>Amount cannot be greater than 100,000</errorMessage>
    </validationRules>
</CustomObject>